@@ -1144,6 +1144,7 @@ Here is a list of named properties currently used inside Spot:
 | ~rejected-word~     | ~std::string~                  | a word rejected by the automaton                                                                                                                      |
 | ~simulated-states~  | ~std::vector<unsigned>~        | map states of the original automaton to states if the current automaton in the result of simulation-based reductions                                  |
 | ~state-names~       | ~std::vector<std::string>~     | vector naming each state of the automaton, for display purpose                                                                                        |
+| ~state-player~      | ~std::vector<bool>~            | the automaton represents a two-player game, and the vector gives the player (0 or 1) associated to each state                          |
 | ~synthesis-outputs~ | ~bdd~                          | conjunction of controllable atomic propositions (used by ~print_aiger()~ to determine which propositions should be encoded as outputs of the circuit) |
 
 Objects referenced via named properties are automatically destroyed
